test/libsolidity/syntaxTests/parsing/invalid_variable_named_unicode.sol
contract C
{
    string unicode = "abc";
}
// ----
// ParserError 2314: (24-31): Expected identifier but got 'ILLEGAL'
